--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -1,11 +1,13 @@
 .Nav {
-  display: flex;
+  text-align: center;
 }
 
 .NavLink {
-  display: block;
+  display: inline-block;
+  padding: 0.5rem;
+  text-decoration: none;
+}
 
-  .active {
-    color: rosybrown;
-  }
+.NavLinkActive {
+  color: var(--color--link-active);
 }
