--- a/src/common/styles/_variables.css
+++ b/src/common/styles/_variables.css
@@ -1,4 +1,4 @@
 :root {
-  --color--application-bg: #999;
-  --color--link-active: chartreuse;
+  --color--application-bg: #f2f2fa;
+  --color--link-active: #a2a2aa;
 }
