--- a/src/common/styles/_reset.scss
+++ b/src/common/styles/_reset.scss
@@ -6,11 +6,23 @@
 }
 
 html {
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
   overscroll-behavior: none;
+  background: var(--color--application-bg);
+}
+
+// Full Height Layout to support Sticky Footer
+body,
+:global(body #___gatsby),
+:global(body #gatsby-focus-wrapper),
+:global(body .layout) {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  flex: 1 0 auto;
 }
 
 body,
@@ -20,6 +32,15 @@ select,
 button {
   font: 20px/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1.2;
 }
 
 h1,
@@ -39,6 +60,18 @@ h5,
 h6 {
   font-size: 1.25rem;
 }
+
+// ==================================================================
+// List Styles
+// ==================================================================
+ul,
+ol {
+  list-style-position: inside;
+}
+
+// ==================================================================
+// Form Styles
+// ==================================================================
 
 input,
 select,
