--- a/src/common/styles/_mixins.scss
+++ b/src/common/styles/_mixins.scss
@@ -10,3 +10,31 @@
     margin: auto;
   }
 }
+
+@mixin glass() {
+  content: '';
+  display: block;
+  position: absolute;
+  pointer-events: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-radius: inherit;
+}
+
+@mixin after-glass() {
+  position: relative;
+  &:after {
+    @include glass;
+  }
+}
+@mixin before-glass() {
+  position: relative;
+  &:before {
+    @include glass;
+  }
+  & > * {
+    position: relative;
+  }
+}
