--- a/src/common/styles/_reset.scss
+++ b/src/common/styles/_reset.scss
@@ -3,7 +3,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-weight: normal;
   box-sizing: border-box;
 }
 
@@ -32,8 +31,11 @@ input,
 textarea,
 select,
 button {
-  font: 20px/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: var(--font--root--size);
+  font-weight: var(--font--root--weight);
+  line-height: var(--font--root--line-height);
 }
 
 h1,
@@ -43,24 +45,35 @@ h4,
 h5,
 h6 {
   line-height: 1.2;
+  margin-bottom: 1rem;
 }
 
 h1,
 h2 {
-  font-size: 3rem;
+  font-size: var(--font--size-xl);
 }
 
 h3 {
-  font-size: 2.5rem;
+  font-size: var(--font--size-l);
 }
 
 h4 {
-  font-size: 1.75rem;
+  font-size: var(--font--size-m);
 }
 
 h5,
 h6 {
-  font-size: 1.25rem;
+  font-size: var(--font--size);
+}
+
+em,
+strong {
+  font-weight: inherit;
+  font-style: inherit;
+}
+
+p {
+  margin-bottom: 1rem;
 }
 
 // ==================================================================
@@ -68,15 +81,15 @@ h6 {
 // ==================================================================
 
 a {
-  color: var(--color--link-color);
+  color: var(--color--link);
 
   &:hover,
   &:focus {
-    color: var(--color--link-hover-color);
+    color: var(--color--link-hover);
   }
 
   &:active {
-    color: var(--color--link-active-color);
+    color: var(--color--link-active);
   }
 }
 
