Setup Form markdown with custom Javascript to execute when it's rendered.
Using React component: 'dangerously-set-html-content'

--- a/src/components/EmailCapture/styles.module.scss
+++ b/src/components/EmailCapture/styles.module.scss
@@ -5,6 +5,10 @@
   background: var(--color--form--bg);
   color: var(--color--form--color);
 }
+.CustomForm {
+  @include block;
+  background: var(--color--form--bg);
+}
 
 .Content {
   @include block-content;
