--- a/src/common/styles/_reset.scss
+++ b/src/common/styles/_reset.scss
@@ -73,7 +73,13 @@ strong {
 }
 
 p {
-  margin-bottom: 1rem;
+  &:not(:last-child) {
+    margin-bottom: 1rem;
+  }
+}
+
+img {
+  display: block;
 }
 
 // ==================================================================
