--- a/src/common/styles/_mixins.scss
+++ b/src/common/styles/_mixins.scss
@@ -1,99 +1,3 @@
-@import './variables';
-
-// ==================================================================
-// Blocks
-// ==================================================================
-@mixin block() {
-  padding: var(--size--unit-base);
-}
-
-@mixin block-content() {
-  @media ($mq-desktop) {
-    max-width: var(--size--desktop-content-max);
-    margin: auto;
-  }
-
-  ul,
-  ol {
-    list-style: none;
-  }
-
-  a {
-    display: inline-block;
-    padding: var(--size--unit-small) var(--size--unit-small) 0 0;
-    text-decoration: none;
-  }
-}
-
-@mixin block-content-columns() {
-  @media ($mq-desktop) {
-    display: flex;
-  }
-
-  & > section {
-    @media ($mq-desktop) {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      flex: 1;
-      &:nth-child(odd) {
-        padding-right: var(--size--unit-base);
-      }
-      &:nth-child(even) {
-        padding-left: var(--size--unit-base);
-      }
-    }
-    @media ($mq-mobile) {
-      padding: calc(var(--size--unit-base)) 0;
-    }
-  }
-}
-
-// ==================================================================
-// Lists
-// ==================================================================
-@mixin list-todo() {
-  li {
-    &:before {
-      content: '';
-      display: inline-block;
-      height: var(--size--unit-base);
-      width: var(--size--unit-base);
-      background-image: url('/images/list-check.png'); // Fallback PNG
-      background-image: url('/images/list-check.svg');
-      background-size: contain;
-      background-repeat: no-repeat;
-      margin-right: calc(0.5 * var(--size--unit-base));
-    }
-  }
-}
-
-// ==================================================================
-// Glass
-// ==================================================================
-@mixin glass() {
-  content: '';
-  display: block;
-  position: absolute;
-  pointer-events: none;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  border-radius: inherit;
-}
-@mixin after-glass() {
-  position: relative;
-  &:after {
-    @include glass;
-  }
-}
-@mixin before-glass() {
-  position: relative;
-  &:before {
-    @include glass;
-  }
-  & > * {
-    position: relative;
-  }
-}
+@import './mixins/block.mixin';
+@import './mixins/list.mixin';
+@import './mixins/glass.mixin';
