--- a/src/common/styles/mixins/_block.mixin.scss
+++ b/src/common/styles/mixins/_block.mixin.scss
@@ -44,7 +44,7 @@
       }
     }
     @media ($mq-mobile) {
-      padding: calc(var(--block--padding)) 0;
+      padding: calc(var(--block--padding));
     }
   }
 }
