Bugfixes and cleanup for event tracking

--- a/src/common/styles/_mixins.scss
+++ b/src/common/styles/_mixins.scss
@@ -1,3 +1,4 @@
 @import './mixins/block.mixin';
 @import './mixins/list.mixin';
 @import './mixins/glass.mixin';
+@import './mixins/responsive-type.mixin';
